<resources>
    <string name="app_name">Sporz</string>

    <string name="main_start">Commencer une partie</string>
    <string name="main_resume">Recommencer la partie</string>
    <string name="main_parameters">Paramètres</string>
    <string name="main_history">Voir les anciennes parties</string>
    <string name="mutant_base">Mutant de base</string>
    <string name="doctor">Docteur</string>
    <string name="psychologist">Psychologue</string>
    <string name="geneticist">Généticien</string>
    <string name="computer_scientist">Informaticien</string>
    <string name="spy">Espion</string>
    <string name="detective">Détective</string>
    <string name="hacker">Hacker</string>
    <string name="traitor">Traître</string>
    <string name="astronaut">Astronaute</string>
    <string name="kill">Tuer</string>
    <string name="heal">Guérir</string>
    <string name="mutate">Muter</string>
    <string name="paralyse">Paralyser</string>
    <string name="infect">Infecter</string>
    <string name="resistant">Résistant</string>
    <string name="host">Hôte</string>
    <string name="normal">Normal</string>
    <string name="Sound">Sain</string>
    <string name="Mutated">Mutant</string>
    <string name="mutated_plural">mutants</string>
    <string name="mutated_sing">mutant</string>
    <string name="show_mutant_nbr">Voir le nombre de mutants ?</string>
</resources>
