<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.ham.sporz.viewmodel.ActionSelectionDialogViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <android.support.constraint.ConstraintLayout
            android:id="@+id/main_button_frame"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:clickable="true"
            android:onClick="@{()->viewModel.onMainClick()}"
            android:background="@drawable/card_shape_normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/kill_button_frame"
            android:paddingTop="10dp">
            <ImageView
                android:id="@+id/main_button_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/dead"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/main_button_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:text="@string/kill"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/kill_button_frame"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:clickable="true"
            android:onClick="@{()->viewModel.onKillClick()}"
            android:background="@drawable/card_shape_normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/main_button_frame"
            app:layout_constraintEnd_toStartOf="@+id/paralyse_button_frame"
            android:paddingTop="10dp">
            <ImageView
                android:id="@+id/kill_button_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/dead"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/kill_button_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:text="@string/kill"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/paralyse_button_frame"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:clickable="true"
            android:onClick="@{()->viewModel.onParalyseClick()}"
            android:background="@drawable/card_shape_normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/kill_button_frame"
            app:layout_constraintEnd_toStartOf="@+id/infect_button_frame"
            android:paddingTop="10dp"
            android:show="@{viewModel.showSecondaryActions()}">
            <ImageView
                android:id="@+id/paralyse_button_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/paralysed"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/paralyse_button_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:text="@string/paralyse"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/infect_button_frame"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:clickable="true"
            android:onClick="@{()->viewModel.onInfectClick()}"
            android:background="@drawable/card_shape_normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/paralyse_button_frame"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="10dp"
            android:show="@{viewModel.showSecondaryActions()}">
            <ImageView
                android:id="@+id/infect_button_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:elevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/infected"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/infect_button_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:text="@string/infect"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>